2008-03-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Rule.cs: Cache Type. This saves 2% (about 16mb) of the memory 
	required to process all Mono 2.0 assemblies.

2008-03-07  Sebastien Pouliot  <sebastien@ximian.com>

	* TestRunner.cs: Add methods to allow easier testing of the 
	events.

2008-03-04  Sebastien Pouliot  <sebastien@ximian.com>

	* Rule.cs: Reduce code duplication between Problem and Solution
	properties.

2008-03-03  Sebastien Pouliot  <sebastien@ximian.com>

	* BasicIgnoreList.cs: Seal inner class.
	* Runner.cs: Add back code removed in last commit.

2008-02-17  Sebastien Pouliot  <sebastien@ximian.com>

	* BasicIgnoreList.cs: Basic implementation, with storage, for
	keeping an ignore list.
	* IIgnoreList.cs: New. Interface to ignorance ;-)
	* IRule.cs: Add FullName.
	* Rule.cs: Implement FullName using the type full name.
	* Runner.cs: Add support to ignore some known defects (or false 
	positives).
	* TestRunner.cs: Implement IIgnoreList.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyResolver.cs: Fix NRE when resolving some methods
	* Defect.cs: Make ExtractFirst methods static. Rename 
	Get[Type|Method]FromLocation to Find*
	* Runner.cs: Handle case where MDB is unavailable.
	* TestRunner.cs: Avoid code duplication in Check* methods.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyResolver.cs: Handle GenericParameter.
	* Runner.cs: Handle the case where Mono.Cecil.Mdb.dll is not
	available.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* Runner.cs: Expose CurrentRule and CurrentTarget
	* TestRunner.cs: Use newly exposed properties.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* MethodSignature.cs
	* MethodSignatures.cs
	* StackEntryAnalysis.cs:
		Moved into Gendarme.Framework.Helpers

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* Runner.cs: Use Rocks to iterate all methods in a type.

2008-02-14  Sebastien Pouliot  <sebastien@ximian.com>
